# aipype

./: .env.example  .gitignore  LICENSE  README-TESTING.md  README.md  RELEASE_NOTES.md  mypy.ini  pyproject.toml  pyrightconfig.json
docs/: conf.py  index.rst
docs/api/: aipype.rst  aipype_extras.rst  aipype_g.rst
pyscripts/: __init__.py  generate_llms_docs.py
scripts/: build_docs.sh  build_docs_txt.sh  check_types.py  create_test_project.sh  generate_llms_docs.py  publish_to_pypi.sh  run_ruff.sh  run_tests.sh  run_type_checks.sh
